apps/linkding/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  selector:
    app: linkding
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9090
